[workspace]
members = [
    "crates/rist-rs-bits",
    "crates/rist-rs-buffers",
    "crates/rist-rs-core",
    "crates/rist-rs-runtime",
    "crates/rist-rs-macros",
    "crates/rist-rs-runtime-std",
    "crates/rist-rs-transport-dtls-openssl",
    "crates/rist-rs-runtime-tokio",
    "crates/rist-rs-sdp",
    "crates/rist-rs-rtp",
    "tools/netzwerker",
    "tools/rist-io",
]
