[workspace]
members = [
    "crates/rist-rs-bits",
    "crates/rist-rs-util",
    "crates/rist-rs-core",
    "crates/rist-rs-types",
    "crates/rist-rs-macros",
    "crates/rist-rs-std",
    "crates/rist-rs-transport-dtls-openssl",
    "crates/rist-rs-tokio",
    "crates/rist-rs-sdp",
    "crates/rist-rs-test",
    "tools/netzwerker",
    "tools/rist-io",
]
resolver = "2"
