[package]
name = "rist-rs-buffers"
version = "0.0.1"
edition = "2021"

[dependencies]
rist-rs-core = { path = "../rist-rs-core" }
rist-rs-macros = { path = "../rist-rs-macros" }
num-traits = "0.2"
log = "0.4"

[dev-dependencies]
rist-rs-bits = { path = "../rist-rs-bits" }
simple_logger = "2.3"
rand = "0.8"
