[package]
name = "rist-rs-buffers"
version = "0.0.1"
edition = "2021"

[dependencies]
rist-rs-core   = { path = "../rist-rs-core" }
rist-rs-macros = { path = "../rist-rs-macros" }
tracing        = { version = "0.1", default-features = false }
hashbrown      = { version = "0.12", default-features = false, features = ["ahash"] }
num-traits     = "0.2"

[dev-dependencies]
rist-rs-bits        = { path = "../rist-rs-bits" }
rand                = "0.8"
tracing-subscriber  = "0.3"

[features]
log = ["tracing/log"]