[package]
name = "rist-rs-core"
version = "0.0.1"
edition = "2021"

[dependencies]
rist-rs-macros = { path = "../rist-rs-macros" }
log = "0.3"
num-traits = { version = "0.2", default-features = false }
bytes = { version = "1.1", default-features = false }

[features]
default = ["alloc", "std"]
alloc = []
std = []
