[package]
edition = "2021"
name    = "rist-rs-core"
version = "0.0.1"

[dependencies]
bytes          = { version = "1.1", default-features = false }
chrono         = { version = "0.4", default-features = false }
log            = "0.3"
num-traits     = { version = "0.2", default-features = false }
rist-rs-macros = { path = "../rist-rs-macros" }
rist-rs-types  = { path = "../rist-rs-types" }


[dev-dependencies]
serde_json = "1.0"

[features]
default = []
std     = []
