[package]
edition = "2021"
name    = "rist-rs-tokio"
version = "0.0.1"

[dependencies]
bitflags        = "2.4"
futures-channel = { version = "0.3" }
rist-rs-core    = { path = "../rist-rs-core", features = ["std"] }
rist-rs-types   = { path = "../rist-rs-types", features = ["std"] }
slab            = { version = "0.4" }
tokio           = { version = "1.25", features = ["net", "time", "rt", "macros"] }
tracing         = { version = "0.1" }
socket2         = { version = "0.4" }

[features]
default    = ["log"]
log        = ["tracing/log"]
log-always = ["tracing/log-always"]
