[package]
name    = "rist-rs-transport-dtls-openssl"
version = "0.0.1"
edition = "2021"

[dependencies]
rist-rs-core    = { path = "../rist-rs-core" }
rist-rs-runtime = { path = "../rist-rs-runtime" }
rist-rs-buffers = { path = "../rist-rs-buffers" }
foreign-types   = { version = "0.3" }
openssl         = { version = "0.10" }
tracing         = { version = "0.1" }

[dev-dependencies]
clap                = { version = "3", features = ["derive"] }
tracing-subscriber  = { version = "0.3" }
rist-rs-runtime-std = { path = "../rist-rs-runtime-std" }

[features]
default                  = ["log"]
log                      = ["tracing/log"]
log-always               = ["tracing/log-always"]
openssl-vendored         = ["openssl/vendored"]
ssl_no_verify_dont_warn  = []