[package]
name = "netzwerker"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
rist-rs-core = { path = "../../rist-rs-core" }
futures = "0.3"
toml = "0.5"
serde_json = "1.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
anyhow = "1.0"
socket2 = "0.4"
rand = "0.8"

[features]
default = ["alloc"]
alloc = []
