[package]
edition = "2021"
name    = "netzwerker"
version = "0.0.1"

[dependencies]
anyhow             = "1.0"
async-trait        = "0.1"
clap               = { version = "3.2", features = ["derive"] }
futures            = "0.3"
libc               = "0.2"
rand               = "0.8"
rist-rs-util       = { path = "../../crates/rist-rs-util", features = ["serde"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
socket2            = "0.4"
tokio              = { version = "1", features = ["full"] }
toml               = "0.5"
tracing            = "0.1"
tracing-subscriber = "0.3"

[features]
alloc   = []
default = ["alloc"]
